PHP 4.0                                                                    NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

?? ??? 200?, Version 4.0.5
- Added mysql_get_client_info(), mysql_get_server_info(),
  mysql_get_proto_info(), and mysql_get_host_info() functions. (Sean)
- Added search cache and track query features.
- Major change of the php pdf api. It could break some functions though
  backwards compatibility was tried to maintain. Adding some still
  missing functions as well. (Uwe)
- mnoGoSearch extension module initial version has been added.
  This module currently at the alpha state, but it can be used already.
- Allow url encoding in DB usernames and passwords (Stig, PEAR)
- Added raiseError and setErrorHandling methods to PEAR class (Stig, PEAR)
- Added support for converting images from JPG/PNG on the fly with the GD
  extension, which is usefull for creating dynamic WAP-sites (Derick)
- Updated ext/mysql/libmysql to version 3.23.32; bug fixes (tim@mysql.com)
- Fixed possible crash in all (non-pcre) regex functions. (Thies)
- Improved str_replace() to accept an array for any parameter - similar
  to preg_replace(). (Andrei)
- Fixed extract() to properly prefix numeric keys when EXTR_PREFIX_ALL is
  used. (Andrei)
- Added EXTR_PREFIX_INVALID flag to extract() to automatically prefix
  string keys that do not constitute valid variable names. (Andrei)
- BeOS patch from svanegmond@bang.dhs.org modified somewhat by Rasmus
- Fixed the Apache module to overwrite PATH_TRANSLATED with SCRIPT_FILENAME,
  only if PATH_TRANSLATED is not previously set (Zeev)
- Fixed crash bug in highlight_string() (Rasmus)
- Added URL support for getimagesize() function (Jani)
- Added xslt_set_scheme_handler() function (carmelo@akooe.com)
- Added the pg_lolseek and pg_lotell functions (Derick)
- Fixed wrong breaking with the wordwrap function (Derick)
- Fixed 'O' and 'r' flags of date() to have correct sign for timezone
  offset. (Andrei)